# simplytim42.github.io

./: .gitignore  404.html  README.md  enable_analytics.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  flag_external_links.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: cd.yaml  ci.yaml
about/: index.html
blog/: index.html
blog/2024/chunk-it-up/: index.html
blog/2024/how-to-remember-anything/: index.html
blog/2024/spaced-repetition/: index.html
blog/2024/the-two-learning-modes/: index.html
blog/2024/to-uni-or-not-to-uni-that-is-my-question/: index.html
blog/2024/will-artificial-intelligence-inherit-my-software-dev-job/: index.html
blog/2025/binary-made-easy/: index.html
blog/2025/discover-how-computers-speak-in-binary/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
blog/category/computer-science-fundamentals/: index.html
blog/category/contemplations/: index.html
blog/category/learning/: index.html
degree/: index.html
docs/: CNAME  about.md  degree.md  index.md
docs/blog/: .authors.yml  index.md
docs/diagrams/: chunks.drawio
docs/stylesheets/: extra.css
hooks/: socialmedia.py
includes/: abbreviations.md  blog-footer.md  icon-youtube.md
includes/blog_series/: computer_science_intro.md  how_we_learn.md
includes/books/: a-mind-for-numbers.md
includes/icons/: icon-book.md  icon-online.md  icon-ou.md
scripts/: enable_analytics.py  flag_ext_links.py  gpt.py
search/: search_index.json
(+25 files in other folders)
