[project]
name = "my-corner-of-the-internet"
version = "0.1.0"
description = "My website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material[imaging]>=9.5.36",
    "mkdocs-rss-plugin>=1.15.0",
    "termynal>=0.12.1",
]

[tool.uv]
dev-dependencies = [
    "openai>=1.50.2",
]
